--- a/web/src/App.css
+++ b/web/src/App.css
@@ -27,6 +27,20 @@
   right: 0;
 }
 
+#button3 {
+  background-color: #24a0ed; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 #button1 {
   background-color: #4CAF50; /* Green */
   border: none;
